--- a/html/home/home.html.twig
+++ b/html/home/home.html.twig
@@ -1,6 +1,12 @@
 {% extends 'main/main.html.twig' %}
 
 {% block content %}
+    <div class="jumbotron">
+        <h1>Hello, world!</h1>
+        <p>...</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    </div>
+
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
