--- a/html/login/login.html.twig
+++ b/html/login/login.html.twig
@@ -90,7 +90,7 @@
 
                     <div class="form-group">
                         <label for="email"
-                            class="col-md-3 control-label">Email</label>
+                            class="col-md-3 control-label">E-mail</label>
                         <div class="col-md-9">
                             <input type="text" class="form-control"
                                 name="email" placeholder="Email Address">
@@ -99,26 +99,24 @@
 
                     <div class="form-group">
                         <label for="firstname"
-                            class="col-md-3 control-label">First
-                            Name</label>
+                            class="col-md-3 control-label">Vorname</label>
                         <div class="col-md-9">
                             <input type="text" class="form-control"
                                 name="firstname"
-                                placeholder="First Name">
+                                placeholder="Vorname">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="lastname"
-                            class="col-md-3 control-label">Last
-                            Name</label>
+                            class="col-md-3 control-label">Nachname</label>
                         <div class="col-md-9">
                             <input type="text" class="form-control"
-                                name="lastname" placeholder="Last Name">
+                                name="lastname" placeholder="Nachname">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="password"
-                            class="col-md-3 control-label">Password</label>
+                            class="col-md-3 control-label">Passwort</label>
                         <div class="col-md-9">
                             <input type="password" class="form-control"
                                 name="passwd" placeholder="Password">
@@ -154,8 +152,7 @@
                         <div class="col-md-offset-3 col-md-9">
                             <button id="btn-fbsignup" type="button"
                                 class="btn btn-primary">
-                                <i class="icon-facebook"></i> Sign Up
-                                with Facebook
+                                <i class="icon-facebook"></i> Mit Facebook Account registrieren
                             </button>
                         </div>
 
