--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 @CHARSET "UTF-8";
 .mouseOver:hover {
-    background-color: #DDEEFF;
+    background-color: #def;
 }
 
 .active {
-    background-color: #00CCAA;
+    background-color: #0ca;
 }
 
 .active {
-    
+
 }
 
 .col-centered {
@@ -16,31 +16,29 @@
 }
 
 #sideBar {
-    left: 0px;
-    top: 10%;
-    height: 75%;
-    width: 8%;
-    background-color: #FF0000;
-    position: fixed;
-    z-index: 1000;
-    border-top-right-radius: 15px;
+    left:                       0px;
+    top:                        10%;
+    height:                     75%;
+    width:                      8%;
+    background-color:           #f00;
+    position:                   fixed;
+    z-index:                    1000;
+    border-top-right-radius:    15px;
     border-bottom-right-radius: 15px;
-    box-shadow: 6px 6px 5px #888888;
+    box-shadow:                 6px 6px 5px #888;
 }
 
 #sideBarInner {
-    top: 20%;
-    height: 40%;
-    width: 20px;
-    background-color: #FFDD00;
-    position: relative;
-    z-index: -1;
-    border-top-left-radius: 15px;
+    top:                       20%;
+    height:                    40%;
+    width:                     20px;
+    background-color:          #fd0;
+    position:                  relative;
+    z-index:                   -1;
+    border-top-left-radius:    15px;
     border-bottom-left-radius: 15px;
-    float: right;
+    float:                     right;
 }
-
-
 
 /*=========================
   Icons
@@ -48,82 +46,103 @@
 
 /* footer social icons */
 ul.social-network {
-	list-style: none;
-	display: inline;
-	margin-left:0 !important;
-	padding: 0;
-}
-ul.social-network li {
-	display: inline;
-	margin: 0 5px;
+    list-style:  none;
+    display:     inline;
+    margin-left: 0 !important;
+    padding:     0;
 }
 
+ul.social-network li {
+    display: inline;
+    margin:  0 5px;
+}
 
 /* footer social icons */
 .social-network a.icoRss:hover {
-	background-color: #F56505;
+    background-color: #f56505;
 }
+
 .social-network a.icoFacebook:hover {
-	background-color:#3B5998;
+    background-color: #3b5998;
 }
+
 .social-network a.icoTwitter:hover {
-	background-color:#33ccff;
+    background-color: #3cf;
 }
+
 .social-network a.icoGoogle:hover {
-	background-color:#BD3518;
+    background-color: #bd3518;
 }
+
 .social-network a.icoVimeo:hover {
-	background-color:#0590B8;
+    background-color: #0590b8;
 }
+
 .social-network a.icoLinkedin:hover {
-	background-color:#007bb7;
+    background-color: #007bb7;
 }
+
 .social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
 .social-network a.icoGoogle:hover i, .social-network a.icoVimeo:hover i, .social-network a.icoLinkedin:hover i {
-	color:#fff;
+    color: #fff;
 }
+
 a.socialIcon:hover, .socialHoverClass {
-	color:#44BCDD;
+    color: #44bcdd;
 }
 
 .social-circle li a {
-	display:inline-block;
-	position:relative;
-	margin:0 auto 0 auto;
-	-moz-border-radius:50%;
-	-webkit-border-radius:50%;
-	border-radius:50%;
-	text-align:center;
-	width: 50px;
-	height: 50px;
-	font-size:20px;
+    display:               inline-block;
+    position:              relative;
+    margin:                0 auto 0 auto;
+    -moz-border-radius:    50%;
+    -webkit-border-radius: 50%;
+    border-radius:         50%;
+    text-align:            center;
+    width:                 50px;
+    height:                50px;
+    font-size:             20px;
 }
+
 .social-circle li i {
-	margin:0;
-	line-height:50px;
-	text-align: center;
+    margin:      0;
+    line-height: 50px;
+    text-align:  center;
 }
 
 .social-circle li a:hover i, .triggeredHover {
-	-moz-transform: rotate(360deg);
-	-webkit-transform: rotate(360deg);
-	-ms--transform: rotate(360deg);
-	transform: rotate(360deg);
-	-webkit-transition: all 0.2s;
-	-moz-transition: all 0.2s;
-	-o-transition: all 0.2s;
-	-ms-transition: all 0.2s;
-	transition: all 0.2s;
+    -moz-transform:     rotate(360deg);
+    -webkit-transform:  rotate(360deg);
+    -ms--transform:     rotate(360deg);
+    transform:          rotate(360deg);
+    -webkit-transition: all 0.2s;
+    -moz-transition:    all 0.2s;
+    -o-transition:      all 0.2s;
+    -ms-transition:     all 0.2s;
+    transition:         all 0.2s;
 }
+
 .social-circle i {
-	color: #fff;
-	-webkit-transition: all 0.8s;
-	-moz-transition: all 0.8s;
-	-o-transition: all 0.8s;
-	-ms-transition: all 0.8s;
-	transition: all 0.8s;
+    color:              #fff;
+    -webkit-transition: all 0.8s;
+    -moz-transition:    all 0.8s;
+    -o-transition:      all 0.8s;
+    -ms-transition:     all 0.8s;
+    transition:         all 0.8s;
 }
 
 a {
- background-color: #D3D3D3;   
+    background-color: #d3d3d3;
+}
+
+footer {
+    background-color:        #ffc078;
+    position:                fixed;
+    bottom:                  0;
+    width:                   100%;
+    z-index:                 9999;
+    border-top-left-radius:  20px;
+    border-top-right-radius: 20px;
+    height:                  25%;
+    padding:                 25px;
 }
